--- a/style.css
+++ b/style.css
@@ -8,7 +8,11 @@
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+
+  font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
 }
 
 html {
@@ -425,6 +429,9 @@ article .icon {
 footer {
   height: 26vh;
   margin: 0 1rem;
+  color: #fff;
+  background-color: #333;
+            
 }
 
 footer p {
