--- a/style.css
+++ b/style.css
@@ -14,7 +14,9 @@ body {
             padding: 0;
             background-color: #f4f4f4;
 }
-
+p {
+  text-align: justify;
+}
 html {
   scroll-behavior: smooth;
 }
