--- a/style.css
+++ b/style.css
@@ -52,9 +52,10 @@ nav {
 }
 
 a {
-  color: black;
+   color: #fff;
   text-decoration: none;
   text-decoration-color: white;
+  text-transform: uppercase;
 }
 
 a:hover {
