--- a/style.css
+++ b/style.css
@@ -2,17 +2,15 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 
-* {
-  margin: 0;
-  padding: 0;
-}
+* 
 
 body {
 
   font-family: "Poppins", sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #f8f9fa;
+            color:#333
 }
 p {
   text-align: justify;
@@ -57,7 +55,7 @@ a {
  }
 
 a:hover {
-  color: grey;
+  color: #007bff;;
   text-decoration: underline;
   text-underline-offset: 1rem;
   text-decoration-color: rgb(181, 181, 181);
