--- a/style.css
+++ b/style.css
@@ -2,18 +2,15 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 
-* 
+* { margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 body {
-
-  font-family: "Poppins", sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f8f9fa;
+          font-family: "Poppins", sans-serif;
+             background-color: #f8f9fa;
             color:#333
-}
-p {
-  text-align: justify;
 }
 html {
   scroll-behavior: smooth;
@@ -21,6 +18,7 @@ html {
 
 p {
   color: rgb(85, 85, 85);
+  font-size: 1.2rem;
 }
 
 /* TRANSITION */
@@ -28,6 +26,14 @@ p {
 a,
 .btn {
   transition: all 300ms ease;
+  display: inline-block;
+  padding: 10px 20px;
+  margin-top: 10px;
+  background: #007bff;
+  color: white;
+  border-radius: 5px;
+  text-decoration: none;
+  transition: 0.3s;
 }
 
 /* DESKTOP NAV */
@@ -35,12 +41,19 @@ a,
 nav,
 .nav-links {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 20px;
+  background-color: #343a40;
 }
 
 nav {
   justify-content: space-around;
   align-items: center;
   height: 17vh;
+  color: white;
+  text-decoration: none;
+   padding: 10px 15px;
 }
 
 .nav-links {
@@ -429,6 +442,7 @@ footer {
   height: 26vh;
   margin: 0 1rem;
   color: #fff;
+  background-color: #343a40;
   
             
 }
